# bias-correction

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  bias_correction.m  pyproject.toml
config/: config_andermatt_zuerich_pr.m  config_andermatt_zuerich_tas.m  config_stlucia_tas.m
docs/: validation.md  zenodo_archive.md
eqm_step/: __init__.py  config.py  core.py  diagnostics.py  io.py  plotting.py  trends.py
eqtm/: __init__.py  config.py  core.py  diagnostics.py  plotting.py  qmf.py  spatial.py
matlab/: run_bias_correction.m  run_eqm_step.m
scripts/: __init__.py  config_andermatt_zuerich_pr.py  config_andermatt_zuerich_pr_trends_off.py  config_andermatt_zuerich_pr_trends_on.py  config_andermatt_zuerich_tas.py  config_andermatt_zuerich_tas_trends_off.py  config_andermatt_zuerich_tas_trends_on.py  run_bias_correction.m  run_bias_correction.py  run_eqm_step.py  run_eqtm.py  run_paper_experiments.py
src/: bias_correction.m  detrend.m  detrendclimdata.m  extract_grid_at_stations.m  formatfigure.m  get_qmfs.m  getdistances.m  getgridlineartrends.m  getlineartrends.m  getoverlappingstationdata.m  getqmf.m  getqmfs.m  gettrends.m  gridtostations.m  hasncvar.m  indexofclosest2.m  interpolate_trends.m  interptrends.m  loadgridcoords.m  loadgriddata.m  loadrawdata.m  loadstationcoords.m  loadstationdata.m  makediagnostics.m  makeplots.m  makeyearlygrid.m  makeyearlytables.m  mapquantiles.m  mapquantilestimestep.m  plot_maps_v2.m  plot_maps_v3.m  plot_maps_v4.m  plotallstationsqq.m  plotmaps.m  plotstationavailability.m  plotstationdiagnostics.m  retrend.m  (+6 more)
(+40 files in other folders)
