[project]
name = "eqtm"
version = "0.1.0"
description = "Empirical quantile and trend mapping for historical gridded climate data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "xarray",
    "netCDF4",
    "matplotlib",
    "geopandas",
]
license = "MIT"
authors = [
    { name = "Michael McCarthy" },
]

[project.urls]
Repository = "https://github.com/mchl-mccrthy/bias-correction"
Documentation = "https://github.com/mchl-mccrthy/bias-correction#readme"

[tool.setuptools.packages.find]
include = ["eqtm*"]
